<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="welcome_fragment_label">Welcome Fragment</string>
    <string name="name_fragment_label">Name Fragment</string>
    <string name="expense_tracker_description">Easy way to track and manage your expenses</string>
    <string name="start">Start</string>
    <string name="app_icon">App Icon</string>
    <string name="welcome_exclamation">Welcome!</string>
    <string name="how_should_i_call_you">How should i call you?</string>
    <string name="select_currency_fragment_label">Select Currency Fragment</string>
    <string name="avatar_fragment_label">Avatar Fragment</string>
    <string name="add_accounts_fragment_label">Add Accounts Fragment</string>
    <string name="use_swipe_gestures_to_navigate">Use swipe gestures to navigate</string>
    <string name="add_avatar">Add Avatar</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="let_s_upload_your_profile_picture">Let\'s upload your profile picture</string>
    <string name="accounts">Accounts</string>
    <string name="added_accounts">Added accounts</string>
    <string name="all_accounts">All accounts</string>
    <string name="select_accounts">Select accounts to track expenses. (You can change this later)</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="crypto">Crypto</string>
    <string name="currency_icon">Currency Icon</string>
    <string name="select_main_currency">Select main currency</string>
    <string name="currencies">Currencies</string>
    <string name="select_secondary_currencies">Select secondary currencies</string>
    <string name="name">Name</string>
    <string name="loading">Loading</string>
    <string name="just_a_sec">Just a sec...</string>
    <string name="saving_fragment_label">Saving Fragment</string>
    <string name="transactions">Transactions</string>
    <string name="transaction_category_icon">Transaction Category Icon</string>
    <string name="middle_dot">·</string>
    <string name="category">Category</string>
    <string name="add_new_transaction">Add New Transaction</string>
    <string name="transaction_name">Name</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select_account">Select Account</string>
    <string name="add">Add</string>
    <string name="add_transaction">Add transaction</string>
    <string name="group_by">Group By:</string>
    <string name="import_raw_json_data">Import raw JSON data from 3rd party apps.\nWARNING: all your current transaction data will be permanently lost.</string>
    <string name="data_import">Data Import</string>
    <string name="settings">Settings</string>
    <string name="import_data">Import Data</string>
    <string name="data_import_beta">Data Import (beta)</string>
    <string name="select_a_supported_app_from_list_below">Select a supported app from list below</string>
    <string name="by_proceeding">Upon proceeding, all of your current transaction data will be permanently lost, so make sure to back it up first.</string>
    <string name="my_tab">My Tab (Мой учёт)</string>
    <string name="permission_denied_action_unavailable">Permission denied. Action unavailable.</string>
    <string name="security">Security</string>
    <string name="lock_the_app">Lock the app</string>
    <string name="fingerprint_summary">If enabled, a fingerprint authentication is required</string>
    <string name="authentication">Authentication</string>
    <string name="auth_description">You have enabled fingerprint authentication in settings.</string>
    <string name="try_again">Try again</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_confirmation">Are you sure you want to delete this transaction?</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
</resources>