<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tristanmcraven.expensetracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.tristanmcraven.expensetracker.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.tristanmcraven.expensetracker.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.tristanmcraven.expensetracker.ui.settings.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_SettingsFragment_to_ImportDataFragment"
            app:destination="@id/ImportDataFragment"/>
    </fragment>

    <fragment
        android:id="@+id/ImportDataFragment"
        android:name="com.tristanmcraven.expensetracker.ui.settings.ImportDataFragment"
        android:label="@string/import_data"
        tools:layout="@layout/fragment_import_data"/>
</navigation>