<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.ImportDataFragment">

    <TextView
        android:id="@+id/textViewSelectApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_supported_app_from_list_below"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewUponProceeding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_proceeding"
        android:textColor="@color/red"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSelectApp"/>

    <LinearLayout
        android:id="@+id/linearLayoutSupportedApps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewUponProceeding">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMyTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/not_found"
            android:text="@string/my_tab"
            android:textAlignment="textStart"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonExpenseTracker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/not_found"
            android:text="@string/expense_tracker"
            android:textAlignment="textStart"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>