<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.start.SelectCurrencyFragment"

    style="@style/StartFragmentStyle">

    <ImageView
        android:id="@+id/imageViewCurrency"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/currencies"
        android:contentDescription="@string/currency_icon"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currencies"
        style="@style/StartHeader"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewCurrency"/>

    <TextView
        android:id="@+id/textViewSelectMainCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_main_currency"
        style="@style/StartSubHeader"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCurrency"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupPrimaryCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:selectionRequired="true"
        app:singleSelection="true"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSelectMainCurrency"/>

    <TextView
        android:id="@+id/textViewSelectSecondaryCurrencies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_secondary_currencies"
        style="@style/StartSubHeader"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroupPrimaryCurrency"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupSecondaryCurrencies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSelectSecondaryCurrencies"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>